<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search_detail"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add_item"
        android:title="@string/create_association"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_learn"
        android:title="@string/learn"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_by_date"
        android:title="@string/sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />


</menu>