<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/association_intro"/>
    <TextView
        style="@style/Information.AccentBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/association_intro1"/>

    <TextView
        style="@style/Information.HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_associations_are_best_remembered"/>

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_associations_are_best_remembered_body_text"/>

    <TextView
        style="@style/Information.HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_control_the_associations"/>

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_control_the_associations_body_text"/>

    <TextView
        style="@style/Information.AccentBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_control_the_associations_body_text1"/>


</LinearLayout>
