<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texts_intro" />

    <TextView
        style="@style/Information.AccentBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texts_verb_bind" />

    <TextView
        style="@style/Information.HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_words_header" />

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_words_body" />

    <TextView
        style="@style/Information.HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/examples_header" />

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/examples_texts_body" />

</LinearLayout>
