<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_learn"
        android:title="@string/learn"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_menu_select_all_off"
        android:title="@string/select_all"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_remove"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/remove"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_migrate"
        android:icon="@drawable/ic_menu_migrate"
        android:title="@string/migrate"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

</menu>