<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/introduction_textView"
            style="@style/Information.BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introduction" />

        <TextView
            android:id="@+id/headerBasic_textView"
            style="@style/Information.HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_types" />

        <TextView
            android:id="@+id/bodyBasic_textView"
            style="@style/Information.BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_basic" />

        <TextView
            android:id="@+id/headerLearning_textView"
            style="@style/Information.HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_learning" />

        <TextView
            android:id="@+id/bodyLearning1_textView"
            style="@style/Information.BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_learning1" />

        <include layout="@layout/item_preview_words_list" />

        <TextView
            android:id="@+id/additional_textView"
            style="@style/Information.BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/additional"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_caption" />

        <TextView
            android:id="@+id/bodyLearning2_textView"
            style="@style/Information.BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/body_learning2" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>