<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/headerChart_textView"
        style="@style/Information.HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetting_curve" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="@dimen/radius8"
        app:cardElevation="@dimen/elevation_normal">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_forget"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/description_forget"
        android:textSize="@dimen/text_caption" />

    <TextView
        android:id="@+id/repeat_textView"
        style="@style/Information.AccentBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_repeat" />


    <TextView
        android:id="@+id/bodyChart_textView"
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgetting_curve_additional" />

    <TextView
        android:id="@+id/periodExample_textView"
        style="@style/Information.AccentBodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_example" />

    <TextView
        android:id="@+id/bodyChart_textView2"
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgetting_curve_additional2" />

</LinearLayout>
