<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dates_intro" />

    <TextView
        style="@style/Information.HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/examples_header" />

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/examples_dates_body" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload" />

        <include android:id="@+id/group_months"
            layout="@layout/item_group_list" />

    </LinearLayout>

</LinearLayout>
