<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical">

    <TextView
        android:id="@+id/examAssociation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/learned_associations"
        style="@style/TextViewStyle.StatisticText"/>

    <TextView
        android:id="@+id/learningAssociation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/learning_associations"
        style="@style/TextViewStyle.StatisticText"/>

    <TextView
        android:id="@+id/needToLearnAssociation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/need_to_learn_associations"
        style="@style/TextViewStyle.StatisticText"/>

    <TextView
        android:id="@+id/allAssociation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/total_association"
        style="@style/TextViewStyle.StatisticText"/>

</LinearLayout>
