<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/Information.HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_header"/>

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_body"/>

    <TextView
        style="@style/Information.HeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code"/>

    <TextView
        style="@style/Information.BodyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/code_table"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <include android:id="@+id/group_code"
                    layout="@layout/item_group_list" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <include android:id="@+id/group_cards"
                    layout="@layout/item_group_list" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
